--- a/tutorial1/checkpoint1.ipynb
+++ b/tutorial1/checkpoint1.ipynb
@@ -334,6 +334,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Renaming columns\n",
     "df.rename({\n",
     "    'GRADES_PK_G':'ENROLL_PREK',\n",
     "    'GRADES_KG_G':'ENROLL_KINDER',\n",
@@ -347,8 +348,10 @@
     "    },\n",
     "    axis=1,inplace=True)\n",
     "\n",
+    "# Dropping all null values from reading 4 score\n",
     "df.dropna(subset=['AVG_READING_4_SCORE'], inplace=True)\n",
     "\n",
+    "# Filling null values in enrollment\n",
     "df[\"ENROLL_ALL_EST\"] = df[\"ENROLL_ALL_EST\"].fillna(df[\"ENROLL_ALL\"])"
    ]
   },
@@ -1394,7 +1397,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**<WRITE A PARAGRAPH SUMMARIZING YOUR WORK, FINDINGS, AND THE PERFORMANCE OF YOUR MODEL\\>**"
+    "I focused on average 4th grade reading score for my response variable. In my model I used 4th grade enrollment, aerage 4th grade math scores, and support services expenditure per student as predictors for reading scores. I was most interested in measuring support services expenditures per student-- I hypothesized that with increased spending per student, there could be higher reading scores as more money is dedicated to educational support. The data came with total support expenditures, which may be biased towards larger states that would have more expenditures in general, so I made a new column for support expenditures per student by dividing the total support expenditures by total enrollment for each observation. When it came to visualizing the data, I plotted 4th grade reading scores against average 4th grade math scores and support expenditures per student. The graphs showed a strong correlation between math scores and reading scores, and a moderate correlation between support expenditures and reading scores. I trained my model on these two variables as well as total 4th grade enrollment. The model yielded an R^2 value of 0.6517, meaning 65.17% of the variability observed in reading scores can be explained by the regression model. While this suggests a moderate correlation, it also indicates there are other factors to consider when building a model to predict these scores. Looking at the graphs to visualize the model's performance show the same idea-- there is some overlap between the predicted and true model behavior, but it's not the most uniform performance. The model could be refined by looking at other potential predictors of 4th grade reading scores or perhaps by reducing the type of data used. I used all data from all years and states and my model, and in the future this could be specified to a specific region or timeline to make the model more accurate."
    ]
   }
  ],
